--- a/pigpio-jni/src/native/CMakeLists.txt
+++ b/pigpio-jni/src/native/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 # Define project and related variables
 # (required by sbt-jni) please use semantic versioning
 #
-project (pigpio-jni)
+project (pigpiojni)
 set(PROJECT_VERSION_MAJOR 0)
 set(PROJECT_VERSION_MINOR 0)
 set(PROJECT_VERSION_PATCH 0)
