ensure pigpio gets linked up

--- a/simple-test/src/native/CMakeLists.txt
+++ b/simple-test/src/native/CMakeLists.txt
@@ -15,10 +15,18 @@ set(PROJECT_VERSION_MAJOR 0)
 set(PROJECT_VERSION_MINOR 0)
 set(PROJECT_VERSION_PATCH 0)
 
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
+string(APPEND CMAKE_SHARED_LINKER_FLAGS " -Wl,--no-undefined")
+
 # Setup JNI
 find_package(JNI REQUIRED)
 if (JNI_FOUND)
     message (STATUS "JNI include directories: ${JNI_INCLUDE_DIRS}")
+endif()
+
+find_package(pigpio REQUIRED)
+if(pigpio_FOUND)
+    message (STATUS "pigpio include directories: ${pigpio_INCLUDE_DIRS}")
 endif()
 
 # Include directories
@@ -38,4 +46,6 @@ file(GLOB LIB_SRC
 #
 set (LIB_NAME ${PROJECT_NAME}${PROJECT_VERSION_MAJOR})
 add_library(${LIB_NAME} SHARED ${LIB_SRC})
+target_link_libraries(${LIB_NAME} PRIVATE ${pigpio_LIBRARY})
+target_include_directories(${LIB_NAME} PRIVATE ${JNI_INCLUDE_DIRS})
 install(TARGETS ${LIB_NAME} LIBRARY DESTINATION .)
